fix: remove overflow hidden do body e div para melhorar a rolagem

--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -15,7 +15,6 @@ body, html {
   height: 100%; 
   font-family: var(--font-sans), ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   overscroll-behavior: none;
-  overflow: hidden;
 }
 
 // html {
